--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -121,5 +121,9 @@
       />
       <p><a href="{{ socialUrls.linkedIn }}">LinkedIn</a></p>
     </div>
+    <div class="contact-item">
+      <img src="../assets/images/github.png" alt="LinkedIn Icon" class="icon" />
+      <p><a href="{{ socialUrls.linkedIn }}">Github </a></p>
+    </div>
   </div>
 </section>
