--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -35,7 +35,8 @@
     transition: transform 0.3s ease-in-out; // Smooth transition
 
     &:hover {
-      transform: translateY(-10px); // Lift effect on hover
+      transform: translateY(-5px); // Lift effect on hover
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     }
 
     .icon {
