--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <app-experience [experiences]="userInfo.experience" />
 
-<app-certifications [certifications]="userInfo.projects" />
+<app-certifications [certifications]="userInfo.certifications" />
 
 <app-projects [projects]="userInfo.projects" />
 
