--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,9 +2,13 @@
   <p class="intro">Get in Touch</p>
   <h1 class="title">Contact Me</h1>
   <div class="contact-info">
-    <div class="contact-item" *ngFor="let contact of contacts">
-      <img [src]="contact.img" [alt]="contact.key" class="icon" />
-      <p>{{ contact.key }}</p>
+    <div
+      class="contact-item"
+      *ngFor="let contact of contacts"
+      (click)="redirect(contact.url)"
+    >
+      <i [class]="contact.icon"></i>
+      <p>{{ contact.value }}</p>
     </div>
   </div>
 </section>
