--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -5,12 +5,15 @@
     <div class="certification-box" *ngFor="let certification of certifications">
       <div class="image-container">
         <img
-          [src]="certification.imgSrc"
+          [src]="certification.img"
           [alt]="certification.title"
-          class="certification-img"
+          class="certification-img img-thumbnail"
         />
       </div>
       <h2 class="certification-title">{{ certification.title }}</h2>
+      <div class="btn-container" *ngIf="certification.link">
+        <button class="btn btn-secondary">View</button>
+      </div>
     </div>
   </div>
 </section>
