--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -4,12 +4,27 @@
   <div class="projects-details">
     <div class="project-box" *ngFor="let project of projects">
       <div class="image-container">
-        <img [src]="project.imgSrc" [alt]="project.title" class="project-img" />
+        <img
+          [src]="project.img"
+          [alt]="project.title"
+          class="img-thumbnail project-img"
+        />
       </div>
       <h2 class="project-title">{{ project.title }}</h2>
       <div class="btn-container">
-        <button class="btn btn-secondary" (click)="openGithub(project.githubLink)">
+        <button
+          *ngIf="project.githubLink"
+          class="btn btn-secondary"
+          (click)="openGithub(project.githubLink)"
+        >
           Github
+        </button>
+        <button
+          *ngIf="project.liveDemoLink"
+          class="btn btn-secondary"
+          (click)="openGithub(project.liveDemoLink)"
+        >
+          Demo
         </button>
       </div>
     </div>
