--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,6 +1,6 @@
 <section class="experience-section" id="experience">
-  <p class="experience-intro">Explore My</p>
-  <h1 class="experience-title">Experience</h1>
+  <p class="intro">Explore My</p>
+  <h1 class="title">Experience</h1>
   <div class="experience-info">
     <div class="experience-category" *ngFor="let exp of experiences">
       <h2 class="sub-title">{{ exp.category }}</h2>
