--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -1,12 +1,9 @@
-// Colors
-$primary-color: #3498db;
-$secondary-color: #2ecc71;
-
-// Fonts
-$heading-font: "Roboto", sans-serif;
-$body-font: "Open Sans", sans-serif;
-
-// Spacing
-$padding-small: 10px;
-$padding-medium: 20px;
-$padding-large: 30px;
+$primary-bg-color: #fff;
+$intro-txt-color: #777;
+$title-txt-color: #333;
+$intro-font-size: 1.5rem;
+$title-font-size: 3rem;
+$intro-m-t: 1rem;
+$title-m-t: 2rem;
+$title-font-weight: 600;
+$border: 1px solid #ddd
