--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,10 +1,12 @@
+@import '../../common/variables';
+
 nav,
 .nav-links {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background: #fff;
+  background: $primary-bg-color
   // position: sticky;
   // top: 0px;
 }
