--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -4,6 +4,7 @@
 .projects-section {
   padding: 4rem 2rem; // Added padding for spacing
   text-align: center; // Center text
+  background: $primary-bg-color;
 
   .projects-details {
     display: flex;
