--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -61,7 +61,7 @@ nav,
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: $primary-bg-color;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
