--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -75,6 +75,11 @@
     cursor: pointer;
     height: 2rem;
     font-size: 1.5rem; // Increased icon size for better visibility
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
