--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -6,4 +6,16 @@ $title-font-size: 3rem;
 $intro-m-t: 1rem;
 $title-m-t: 2rem;
 $title-font-weight: 600;
-$border: 1px solid #ddd
+$border: 1px solid #ddd;
+
+
+
+$dark-mode-primary-bg-color: #777;
+$dark-mode-intro-txt-color: #fff;
+$dark-mode-title-txt-color: #333;
+$dark-mode-intro-font-size: 1.5rem;
+$dark-mode-title-font-size: 3rem;
+$dark-mode-intro-m-t: 1rem;
+$dark-mode-title-m-t: 2rem;
+$dark-mode-title-font-weight: 600;
+$dark-mode-border: 1px solid #ddd
