--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,20 +3,12 @@
   <h1 class="title">About Me</h1>
   <div class="details-container">
     <div class="detail-box">
-      <img
-        src="../assets/images/experience.png"
-        alt="Experience Icon"
-        class="icon"
-      />
+      <i class="fas fa-briefcase icon"></i>
       <h3>Experience</h3>
       <p>1+ years<br />Frontend Development</p>
     </div>
     <div class="detail-box">
-      <img
-        src="../assets/images/education.png"
-        alt="Education Icon"
-        class="icon"
-      />
+      <i class="fas fa-graduation-cap icon"></i>
       <h3>Education</h3>
       <p>{{ about.education.degree }}</p>
     </div>
