--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -19,13 +19,14 @@
         >
           Github
         </button>
-        <button
+        <!-- <button
           *ngIf="project.liveDemoLink"
           class="btn btn-secondary"
           (click)="openGithub(project.liveDemoLink)"
         >
           Demo
-        </button>
+        </button> -->
+        <!-- <button class="btn btn-secondary" (click)="openModal(project)">View</button> -->
       </div>
     </div>
   </div>
