--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,13 @@
 
 <app-experience [experiences]="userInfo.experience" />
 
-<app-certifications [certifications]="userInfo.certifications" />
+<app-card
+  [cardId]="'certifications'"
+  [cardTitle]="'Certifications'"
+  [items]="certifications"
+/>
 
-<app-projects [projects]="userInfo.projects" />
+<app-card [cardId]="'projects'" [cardTitle]="'Projects'" [items]="projects" />
+
 
 <app-contact [contacts]="userInfo.contact" />
-    
