--- a/src/app/overview-dialog/overview-dialog.component.scss
+++ b/src/app/overview-dialog/overview-dialog.component.scss
@@ -5,11 +5,12 @@ $danger-color: #dc3545;
 
 .custom-dialog-content {
   padding: 24px;
+  border-radius: 8px;
 }
 
 .modal-body-content {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 
   .modal-image {
     flex: 1;
@@ -19,37 +20,36 @@ $danger-color: #dc3545;
       max-width: 100%;
       height: auto;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     }
   }
 
   .modal-details {
     flex: 2;
-    padding-left: 20px;
 
     p {
       font-size: 16px;
       line-height: 1.6;
+      margin-bottom: 20px;
     }
 
     .modal-buttons {
-      margin-top: 20px;
+      display: flex;
+      gap: 15px;
 
       button {
         font-size: 14px;
         padding: 8px 16px;
         text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        i {
+          font-size: 16px;
+        }
       }
 
-      .btn-primary {
-        background-color: $primary-color;
-        color: #fff; // Text color
-      }
-
-      .btn-secondary {
-        background-color: $secondary-color;
-        color: #fff; // Text color
-      }
+     
     }
   }
 }
