--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,4 +1,4 @@
-<section class="profile-section" id="profile">
+<div class="profile-section" id="profile">
   <div class="pic-container">
     <img [src]="intro.profile" alt="Profile Picture" class="img-thumbnail" />
   </div>
@@ -25,4 +25,4 @@
       ></i>
     </div>
   </div>
-</section>
+</div>
