--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -8,6 +8,19 @@ $title-m-t: 2rem;
 $title-font-weight: 600;
 $border: 1px solid #ddd;
 
+$primary-bg-color: #f8f9fa;
+$secondary-text-color: #6c757d;
+$primary-text-color: #343a40;
+$border-color: #dee2e6;
+$box-bg-color: #ffffff;
+$box-hover-bg-color: #f1f3f5;
+$title-text-color: #212529;
+$btn-bg-color: #007bff;
+$btn-text-color: #ffffff;
+$btn-hover-bg: #0056b3;
+$btn-hover-text: #ffffff;
+
+
 
 
 $dark-mode-primary-bg-color: #777;
