--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -10,13 +10,12 @@
           [alt]="item.title"
           class="img-thumbnail container-img"
         />
-      </div>
-      <h2 class="container-title">{{ item.title }}</h2>
-      <div class="btn-container">
-        <button class="btn btn-secondary" (click)="openModal(item)">
+        <button class="btn btn-secondary view-btn" (click)="openModal(item)">
           View
         </button>
       </div>
+      <h2 class="container-title">{{ item.title }}</h2>
+    
     </div>
     }
   </div>
